--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,16 @@ wpi.java.debugJni = false
 
 def includeDesktopSupport = true
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
+
+    implementation "org.yaml:snakeyaml:1.30"
+
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
