--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -8,6 +8,6 @@ jobs:
   versioning:
     runs-on: ubuntu-latest
     steps:
-      - uses: robolancers/lancer-deploy-tool@v1.0.0
+      - uses: robolancers/lancer-deploy-tool@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
