fix(versioning): Updated to v2.0.0

--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -8,6 +8,6 @@ jobs:
   versioning:
     runs-on: ubuntu-latest
     steps:
-      - uses: robolancers/lancer-deploy-tool@latest
+      - uses: robolancers/lancer-deploy-tool@v2.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
