--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,12 +30,30 @@ jobs:
       - name: Check linting (Spotless)
         run: ./gradlew spotlessCheck
 
+  simulate:
+    runs-on: ubuntu-latest
+
+    container: wpilib/roborio-cross-ubuntu:2023-22.04
+
+    steps:
+
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
+
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Simulate code
+        run: ./gradlew simulateJava
+
   build:
 
     runs-on: ubuntu-latest
 
     container: wpilib/roborio-cross-ubuntu:2023-22.04
-
 
     steps:
       - uses: actions/checkout@v3
@@ -44,6 +62,9 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Run unit tests
+        run: ./gradlew test
 
       - name: Compile and run tests on robot code
         run: ./gradlew build
